--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
